app/globals.css
:root {
  --foreground: #ffffff;
  --background: #171717;
}

html {
  height: 100%;
  scrollbar-gutter: stable;
  scrollbar-width:;
  scrollbar-color: gray transparent;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

::view-transition-old(root) {
  animation: 300ms ease-in-out both fade reverse;
}
::view-transition-new(root) {
  animation: 300ms ease-in-out both fade;
}

@keyframes fade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* Respect reduced motion */
@media (prefers-reduced-motion: reduce) {
  ::view-transition-old(*),
  ::view-transition-new(*),
  ::view-transition-group(*) {
    animation-duration: 0s;
    animation-delay: 0s;
  }
}

